[workspace]
members = [
    # Utils
    "src/utils/repo-tools",
    # Apps
    "src/app/api-server",
    "src/app/oracle-provider",
]
resolver = "2"


[workspace.dependencies]
# Utils
container-runtime = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
database-common = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
event-bus = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
internal-error = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
random-names = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
# Domain
opendatafabric = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-task-system = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-task-system-services = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-accounts = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
# Infra
kamu = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-task-system-inmem = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-flow-system-services = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-flow-system-inmem = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-graphql = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-http = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-oauth = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-odata = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-auth-oso = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-adapter-flight-sql = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-accounts-services = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-accounts-inmem = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-accounts-postgres = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }
kamu-accounts-sqlite = { git = "https://github.com/kamu-data/kamu-cli", tag = "v0.188.1", version = "0.188.1", default-features = false }


[workspace.package]
version = "0.26.0"
edition = "2021"
homepage = "https://github.com/kamu-data/kamu-platform"
repository = "https://github.com/kamu-data/kamu-platform"
authors = ["Kamu Data Inc. <dev@kamu.dev>"]
readme = "README.md"
license-file = "LICENSE.txt"
keywords = [
    "data",
    "collaboration",
    "etl",
    "pipeline",
    "provenance",
    "blockchain",
]
include = ["benches/*.rs", "src/**/*.rs", "Cargo.toml"]
publish = false


[workspace.lints.clippy]
# clippy::all (clippy::сorrectness, clippy::suspicious, clippy::style, clippy::complexity, clippy::perf)
new_without_default = "allow"
too_many_arguments = "allow"
module_inception = "allow"

# clippy::pedantic
pedantic = { level = "warn", priority = -1 }

default_trait_access = "allow"
fn_params_excessive_bools = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
return_self_not_must_use = "allow"
similar_names = "allow"
single_match_else = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unused_self = "allow"
wildcard_imports = "allow"


# clippy::cargo
cargo = { level = "warn", priority = 0 }
multiple_crate_versions = { level = "allow", priority = 1 }


[profile.dev]
# Change this to 1 for faster builds that still preserve enough info for backtraces.
# Use 2 when you need to attach a debugger.
debug = 2


# Emit the line info tables for our crates to produce useful crash reports and backtraces.
# We don't emit info for dependencies as this significantly increases binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#debug
[profile.release.package]
container-runtime = { debug = 1 }
internal-error = { debug = 1 }
opendatafabric = { debug = 1 }
kamu-task-system = { debug = 1 }
kamu = { debug = 1 }
kamu-task-system-inmem = { debug = 1 }
kamu-adapter-graphql = { debug = 1 }
kamu-adapter-http = { debug = 1 }
kamu-adapter-oauth = { debug = 1 }
kamu-adapter-auth-oso = { debug = 1 }
kamu-adapter-flight-sql = { debug = 1 }


[profile.ci]
inherits = "dev"
# CI builds often are closer to from-scratch builds. Incremental adds an extra
# dependency-tracking overhead and significantly increases the amount of IO and
# the size of ./target, which make caching less effective
# See: https://matklad.github.io/2021/09/04/fast-rust-builds.html#CI-Workflow
incremental = false
# Line info is enough to get good backtraces in CI - we don't need the
# full debugging symbols that are only useful when attaching a debugger.
debug = 1

# Use this section to test or apply emergency ovverides to dependencies
# See: https://doc.rust-lang.org/cargo/reference/overriding-dependencies.html
[patch.crates-io]
datafusion-odata = { git = 'https://github.com/kamu-data/datafusion-odata.git', branch = 'axum-0.6' }
