[package]
name = "kamu-api-server"
version = "0.2.0"
authors = ["Sergii Mikhtoniuk <smikhtoniuk@kamu.dev>"]
edition = "2021"

[dependencies]
# Kamu
dill = { workspace= true }
opendatafabric = { workspace= true }
kamu = { workspace= true }
kamu-adapter-graphql = { workspace= true }

# APIs
http = "*"
hyper = "*"
tower = { version = "*" }
tower-http = { version = "*", features = ["trace", "cors"] }
axum = { version = "*", features = ["ws"] }
axum-extra = { version = "*", features = ["async-read-body"] }
async-graphql = { version = "*", features = ["chrono", "url", "apollo_tracing"] }
async-graphql-axum = "*"

# Tracing / logging / telemetry
tracing = "*"
tracing-appender = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-log = "*"
tracing-bunyan-formatter = "*"

# Utils
chrono = "*"
clap = "*"
futures = "*"
indoc = "*"
serde = "*"
serde_json = "*"
tokio = { version = "*", features = ["macros"] }
tokio-util = { version = "*", features = ["rt"] }
url = "*"


[dev-dependencies]
tempfile = "*"
rand = "^0.8"
indoc = "*"  # Compile-time unindent
env_logger = "*"
test-log = { version = "*", features = ["trace"] }
