[package]
name = "kamu-api-server"
description = "Kamu Compute Node API component"
version = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
readme = { workspace = true }
license-file = { workspace = true }
keywords = { workspace = true }
include = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }


[dependencies]
dill = "0.8"
container-runtime = { workspace = true }
event-bus = { workspace = true }
internal-error = { workspace = true }
opendatafabric = { workspace = true }
kamu = { workspace = true }
kamu-task-system-services = { workspace = true }
kamu-task-system-inmem = { workspace = true }
kamu-flow-system-services = { workspace = true }
kamu-flow-system-inmem = { workspace = true }
kamu-adapter-graphql = { workspace = true }
kamu-adapter-http = { workspace = true }
kamu-adapter-oauth = { workspace = true }
kamu-adapter-odata = { workspace = true }
kamu-adapter-auth-oso = { workspace = true }
kamu-adapter-flight-sql = { workspace = true }
kamu-accounts = { workspace = true }
kamu-accounts-services = { workspace = true }
kamu-accounts-inmem = { workspace = true }

# APIs
http = "0.2"
hyper = "0.14"
arrow-flight = { version = "52", features = ["flight-sql-experimental"] }
axum = { version = "0.6", features = ["ws"] }
axum-extra = { version = "0.8", features = ["async-read-body"] }
async-graphql = { version = "6", features = [
    "chrono",
    "url",
    "apollo_tracing",
] }
async-graphql-axum = "6"
tonic = { version = "0.11", default-features = false }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["trace", "cors"] }

# Tracing / logging / telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "std",
    "env-filter",
    "fmt",
    "ansi",
] }
tracing-log = "0.2"
tracing-bunyan-formatter = "0.3"

# Utils
async-trait = { version = "0.1", default-features = false }
chrono = "0.4"
clap = "4"
datafusion = { version = "39", default-features = false, features = [
    "crypto_expressions",
    "encoding_expressions",
    "parquet",
    "regex_expressions",
    "unicode_expressions",
    "compression",
] }
figment = { version = "0.10", features = ["env", "yaml", "json"] }
futures = "0.3"
indoc = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-stream = { version = "0.1", default-features = false, features = ["net"] }
tokio-util = { version = "0.7", default-features = false, features = ["rt"] }
thiserror = { version = "1", default-features = false }
url = "2"


[dev-dependencies]
rand = "0.8"
env_logger = "0.11"
test-group = { version = "1" }
test-log = { version = "0.2", features = ["trace"] }
# Kamu
